PR remarks, use ENTSOE constants
Signed-off-by: Antoine LIMOUZIN <antoine.limouzin@rte-france.com>